outputs/workspace_output_1773830485_359.txt
  File "/workspace/mechanic-shop/fix_quote_buttons.py", line 1
    <parameter name="content">#!/usr/bin/env python3
    ^
SyntaxError: invalid syntax
